# MyJNINDKAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/hamigo/com/tw/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: A.cpp  A.h  native-lib.cpp
app/src/main/java/hamigo/com/tw/myapplication/: MainActivity.java
app/src/test/java/hamigo/com/tw/myapplication/: ExampleUnitTest.java
